# bnf2c

./: .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  MakeNames.mk  MakeRules.mk  Makefile  ProjectHome.md  README.md  bnf2c.code-workspace
cmake/modules/: AddUnitTest.cmake  FindBNF2C.cmake  FindRE2C.cmake
src/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  Dictionnary.cpp  Dictionnary.h  Errors.cpp  Errors.h  Grammar.cpp  Grammar.h  LexerBNF.h  LexerBNF.re2c.cpp  Makefile  Options.cpp  Options.h  OutputFormatter.cpp  OutputFormatter.h  ParseTable.cpp  ParseTable.h  ParserBNF.cpp  ParserBNF.h  ParserState.cpp  ParserState.h  ParsingTable.cpp  ParsingTable.h  Rule.cpp  Rule.h  Streams.cpp  Streams.h  Symbol.cpp  Symbol.h  Token.cpp  Token.h  main.cpp
src/bnf2c-parser/: CMakeLists.txt  LexerBNF.h  LexerBNF.re2c.cpp  LexerState.cpp  LexerState.h  ParserBNF.cpp  ParserBNF.h  Token.cpp  Token.h
src/config/: CMakeLists.txt  Options.cpp  Options.h  ParameterizedString.cpp  ParameterizedString.h
src/core/: CMakeLists.txt  Dictionary.h  Grammar.cpp  Grammar.h  Item.cpp  Item.h  ParseTable.cpp  ParseTable.h  Parser.cpp  Parser.h  ParserState.cpp  ParserState.h  ParsingAction.cpp  ParsingAction.h  Rule.cpp  Rule.h  Symbol.cpp  Symbol.h
src/core/LALR1/: LALR1Parser.cpp  LALR1Parser.h  LALR1State.cpp  LALR1State.h
src/core/LR0/: LR0Parser.cpp  LR0Parser.h  LR0State.cpp  LR0State.h
src/core/LR1/: LR1Parser.cpp  LR1Parser.h  LR1State.cpp  LR1State.h
src/generator/: CMakeLists.txt  FunctionGenerator.cpp  FunctionGenerator.h  ParserGenerator.cpp  ParserGenerator.h  StateGenerator.cpp  StateGenerator.h  SwitchGenerator.cpp  SwitchGenerator.h
src/printer/: CMakeLists.txt  ErrorsPrinter.cpp  GrammarPrinter.cpp  ItemPrinter.cpp  OptionsPrinter.cpp  ParserPrinter.cpp  PrettyPrinters.h  RulePrinter.cpp  SymbolPrinter.cpp  TokenPrinter.cpp
src/utils/: Algos.h
test/: CMakeLists.txt  Makefile  bnf_sample.bnf2c.c  bnf_sample.re2c.bnf2c.c  calc.re2c.bnf2c.cpp  wikipedia.h  wikipedia.re2c.bnf2c.c  wikipedia_main.cpp  wikipedia_sample.re2c.bnf2c.c
